--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
-RewriteEngine On  
-RewriteCond %{HTTPS} !^on$ [NC]  
-RewriteRule . https://%{HTTP_HOST}/%{REQUEST_URI} [L] HTTPS_HOST ???  
+RewriteEngine On
+RewriteCond %{HTTPS} !=on
+RewriteCond %{ENV:HTTPS} !=on
+RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
